--- a/app/assets/javascripts/controllers/cars/helpers/maps_modes.coffee.erb
+++ b/app/assets/javascripts/controllers/cars/helpers/maps_modes.coffee.erb
@@ -29,85 +29,132 @@
                 
     class @Maps
         @refresh : () ->
-            if window.current_mode = "pins"
-                Maps.switch_to_pins()
+            if window.current_mode == "road"
+                Maps.switch_to_pins(window.map_data)
+            else if window.current_mode == "one_pin"
+                Cars.Show.one(window.map_data)
             else
-                Maps.switch_to_directions()
+                Cars.Show.all(window.map_data)
+            
+        @switch_to_pins : (data) ->
 
-        @switch_to_pins : () ->
-            window.current_mode = "pins"
+            window.current_mode = "road"
+            window.map_data = data
+            data_for_points  = []
 
             handler = Gmaps.build("Google", builders: { Marker: PositionMarkerBuilder } )
             handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
 
-                for one_marker, i in gon.data
+                console.log(data)
 
-                    if i == 0 
-                        pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
-                    else if gon.data.length - 1 == i
-                        pin = "<img width='36px' height='36px' src='<%= image_path('green_pin.png') %>'>"
-                    else
-                        pin = "<img width='36px' height='36px' src='<%= image_path('yellow_pin.png') %>'>"
+                i = 1
 
-                    content = "<div><b>Date:</b><br/>" + one_marker.infowindow + "</div>"
+                for one_marker in data
+
+                    status = one_marker.infowindow.split('/')[1]
+                    date = one_marker.infowindow.split('/')[0]
                     
-                    marker = handler.addMarker
-                        lat:               one_marker.lat
-                        lng:               one_marker.lng
-                        custom_marker:     pin
-                        position_infowindow: content
-                    handler.bounds.extendWith(marker)
+                    if status == "start" || status == "stop"
+
+                        if status == "start"
+                            pin = "<span class='badge badge-success'>"+(i+1)+"</span>"
+                        
+                        if status == "stop"
+                            pin = "<span class='badge badge-danger'>"+(i+1)+"</span>"
+                            i++
+
+                        content = "<div><b>Date:</b><br/>" + date + "</div>"
+                        
+                        marker = handler.addMarker
+                            lat:               one_marker.lat
+                            lng:               one_marker.lng
+                            custom_marker:     pin
+                            position_infowindow: content
+
+                        handler.bounds.extendWith(marker)
+
+                        data_for_points.push(one_marker)
+
 
                 points = []
-                for point, i in gon.data
-                    hash = {lat: gon.data[i]["lat"], lng: gon.data[i]["lng"]}
-                    # console.log hash
+                for point, i in data
+                    hash = {lat: data[i]["lat"], lng: data[i]["lng"]}
                     points[i] = hash
 
-                console.log("points")    
+                console.log(points.length)
+                points.pop()
+                console.log(points.length)
                 console.log(points)
 
-                polylines = handler.addPolylines(
-                    [
-                      points
-                    ],
+                polyline = handler.addPolyline(points,
                     { strokeColor: '#FF0000'}
                 );
 
-                handler.bounds.extendWith(polylines);
-                    
+                console.log('test :')
+                #console.log(polyline[0])
+
+                #handler.bounds.extend(polyline[0]);
+                #handler.bounds.extend(polyline[polyline.length-1]);
                 handler.fitMapToBounds()
-                handler.getMap().setZoom(13)
+
+                handler.getMap().setZoom(11)
 
                 window.handler = handler
 
         @switch_to_directions : (data) ->
+
             # Set current map view mode to directions (instead of just showing little markers)
-            gon.data = data
+
             window.current_mode = "directions"
 
-            handler = Gmaps.build("Google")
+            directionsDisplay = new (google.maps.DirectionsRenderer)
+            directionsService = new (google.maps.DirectionsService)
 
+            calcRoute = ->
+
+                origin_lat = data[0].lan
+                origin_lng = data[0].lng
+                destin_lat = data[data.length-1].lan
+                destin_lng = data[data.length-1].lng
+
+                origin = new (google.maps.LatLng)(origin_lat, origin_lng)
+                destination = new (google.maps.LatLng)(destin_lat, destin_lng)
+
+                waypts = []
+                i = 1
+                while i < data.length - 2
+                    status = data[i].infowindow.split('/')[1]
+                    if status == "start"                 
+                        waypts.push
+                            location: new (google.maps.LatLng)(data[i].lat, data[i].lng)
+                            stopover: false
+                    i++
+
+                console.log "========="
+                console.log waypts
+                waypts.pop()
+                console.log waypts.length
+
+                request = 
+                    origin: origin
+                    destination: destination
+                    travelMode: google.maps.TravelMode.DRIVING
+                    waypoints: waypts
+                    optimizeWaypoints: false
+
+                directionsService.route request, (response, status) ->
+                    if status == google.maps.DirectionsStatus.OK
+                        directionsDisplay.setDirections response
+                    else
+                        alert(status)
+                    return
+
+            calcRoute()
+
+            handler = Gmaps.build("Google", builders: { Marker: PositionMarkerBuilder } )
             handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
                 window.handler = handler
-                window.data = gon.data
-
-            points = []
-
-            for point, i in gon.data
-                hash = {lat: gon.data[i]["lat"], lng: gon.data[i]["lng"]}
-                # console.log hash
-                points[i] = hash
-
-            polylines = handler.addPolylines(
-                [
-                  points
-                ],
-                { strokeColor: '#FF0000'}
-            );
-
-            handler.bounds.extendWith(polylines);
-            handler.fitMapToBounds();
-            handler.getMap().setZoom(11)
-
+                window.data = data
+                directionsDisplay.setMap handler.getMap()
+                return
             
