Fix LogBook | Refactoring Map using React

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,60 +1,62 @@
 %div.clearfix
 %div.content
+  .row
+    .col-md-12
+      .grid.simple.grid-no-mbot.sin-border
+        .grid-body.mi-padding.no-border.border-bot.grid-without-title
+          %form{:class => "form-no-horizontal-spacing"}
+            %div#logbook_bot.row.column-seperation
+
+              %div.col-md-6
+
+                %div.row
+                  %div.col-md-6
+                    %div.input-append.default.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :class => "datepicker start-date form-control", :placeholder => "Start Date", :value => Settings.start_date.strftime("%d/%m/%Y")}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-calendar
+
+                  %div.col-md-6
+                    %div.input-append.default.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :placeholder => "Time", :class => "timepicker start-time form-control", :value => Settings.start_time, :data => {:provide => "timepicker"}}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-clock-o
+
+              %div.col-md-6
+
+                %div.row
+                  %div.col-md-5
+                    %div.input-append.default.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :class => "datepicker end-date form-control", :placeholder => "End Date", :value => Settings.end_date.strftime("%d/%m/%Y")}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-calendar
+
+                  %div.col-md-5
+                    %div.input-append.default.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :placeholder => "Time", :class => "timepicker end-time form-control", :value => Settings.end_time, :data => {:provide => "timepicker"}}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-clock-o
+
+                  %div.col-md-2
+                    %div.form-group
+                      %div
+                        %input{:type => "button", id: 'apply_date_filter', :class => "btn btn-default btn-smll", value: 'Apply Filter'}/
+
   %div.row
     = react_component "Home", carsOverviewPath: cars_overview_home_index_path, carsIndexPath: home_index_path
 
-/ .col-md-12.no-padding
-/   .grid.simple.grid-no-mbot.sin-border
-/     .grid-body.mi-padding.no-border.border-bot.grid-without-title
-/       %form{:class => "form-no-horizontal-spacing"}
-/         %div#logbook_bot.row.column-seperation
-
-/           %div.col-md-5.col-md-ofsfet-1
-
-/             %div.row.form-row
-/               %div.col-md-5
-/                 %div.input-append.default.date.no-padding
-/                   %div.form-group
-/                     %div
-/                       %input{:type => "text", :class => "datepicker start-date form-control", :placeholder => "Start Date", :value => Settings.start_date.strftime("%d/%m/%Y")}/
-/                       %span.add-on
-/                         %span.arrow
-/                         %i.fa.fa-calendar
-
-/               %div.col-md-5
-/                 %div.input-append.default.date.no-padding
-/                   %div.form-group
-/                     %div
-/                       %input{:type => "text", :placeholder => "Time", :class => "timepicker start-time form-control", :value => Settings.start_time, :data => {:provide => "timepicker"}}/
-/                       %span.add-on
-/                         %span.arrow
-/                         %i.fa.fa-clock-o
-
-/           %div.col-md-5
-
-/             %div.row.form-row
-/               %div.col-md-5
-/                 %div.input-append.default.date.no-padding
-/                   %div.form-group
-/                     %div
-/                       %input{:type => "text", :class => "datepicker end-date form-control", :placeholder => "End Date", :value => Settings.end_date.strftime("%d/%m/%Y")}/
-/                       %span.add-on
-/                         %span.arrow
-/                         %i.fa.fa-calendar
-
-/               %div.col-md-5
-/                 %div.input-append.default.date.col-md-10.no-padding
-/                   %div.form-group
-/                     %div
-/                       %input{:type => "text", :placeholder => "Time", :class => "timepicker end-time form-control", :value => Settings.end_time, :data => {:provide => "timepicker"}}/
-/                       %span.add-on
-/                         %span.arrow
-/                         %i.fa.fa-clock-o
-
-/               %div.col-md-2
-/                 %div.form-group
-/                   %div
-/                     %input{:type => "button", id: 'apply_date_filter', :class => "btn btn-default btn-smll", value: 'Apply Filter'}/
 
 / .col-md-6.map.no-padding{ :style => "width: 50%;" }
 
