--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,3 +142,12 @@
 .grid.simple.overview .title-inline{
 	display: inline-block;
 }
+
+.lazy_content {
+	opacity: 0;
+	transition: opacity .2s ease-in;
+}
+
+.loaded {
+	opacity: 1;
+}
